add debug option and add more debug logs

--- a/docs/specs/2018-04-03-zh-cn.md
+++ b/docs/specs/2018-04-03-zh-cn.md
@@ -34,15 +34,18 @@ Transform: 'Aliyun::Serverless-2018-04-03'
 Resources:
   MyService: # service name
     Type: 'Aliyun::Serverless::Service'
-    Policies:
-      - AliyunFCExecute # Managed Policy
-      - Version: '2012-10-17' # Policy Document
-        Statement:
-          - Effect: Allow
-            Action:
-              - oss:GetObject
-              - oss:GetObjectACL
-            Resource: 'acs:oss:::my-bucket/*'
+  MyService: # service name
+    Type: 'Aliyun::Serverless::Service'
+    Properties:
+      Policies:
+        - AliyunFCReadOnlyAccess # Managed Policy
+        - Version: '1' # Policy Document
+          Statement:
+            - Effect: Allow
+              Action:
+                - oss:GetObject
+                - oss:GetObjectACL
+              Resource: '*'
     MyFunction: # function name
       Type: 'Aliyun::Serverless::Function'
       Properties:
